# pattie

./: Cargo.toml  LICENSE
benches/: bench_coo_ttm.rs  bench_coo_ttm_multi_thread.rs  bench_scoo_ttm.rs  bench_scoo_ttm_multi_thread.rs  bench_tensor_coo_io.rs  bench_ttm.rs  bench_ttm_multi_thread.rs
data/docs/: rust-onboard-zh_CN.md
data/tensors/: 3D_12031.tns  3d-24.tns  3d_7.tns  3d_8.tns  3d_dense.tns  4d_3_16.tns
docs/: build-rustdoc.md  rust-onboard-en.md  rust-onboard-zh_CN.md
examples/: tensor_coo_io.rs  ttm_random.rs
src/: lib.rs
src/algos/: mod.rs
src/algos/matrix/: create_random_dense.rs  mod.rs
src/algos/tensor/: coo_mul.rs  coo_sort.rs  create_random_coo.rs  mod.rs
src/algos/tensor_matrix/: coo_mul_dense.rs  mod.rs  scoo_mul_dense.rs
src/algos/vector/: mod.rs  reorder.rs
src/io/: lineno_reader.rs  mod.rs  read_coo.rs  write_coo.rs
src/macros/: debug_timer.rs  mod.rs
src/structs/: dense_matrix.rs  matrix.rs  mod.rs  sparse_matrix_coo.rs  sparse_matrix_hicoo.rs  sparse_tensor_coo.rs
src/structs/axis/: axes.rs  axis.rs  builder.rs  mod.rs
src/structs/matrix/: coo.rs  dense.rs  mod.rs
src/structs/tensor/: coo.rs  coo_from_ndarray.rs  coo_iter.rs  coo_iter_mut.rs  mod.rs
src/structs/vec/: mod.rs
src/traits/: axis.rs  idxtype.rs  matrix.rs  mod.rs  raw_parts.rs  scalar.rs  tensor.rs  tensor_iter.rs  traits.rs  valtype.rs
src/utils/: hint.rs  logger.rs  mod.rs  tracer.rs
src/utils/ndarray_unsafe/: ix1.rs  ix2.rs  mod.rs
tests/: test_coo_mul_dense.rs  test_tensor_coo_io.rs
