[package]
name = "pattie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
clap = "2.34.0"
criterion = "0.3.5"
crossbeam = "0.8.1"
ndarray = { version = "0.15.4", features = ["blas", "matrixmultiply-threading", "rayon"] }
ndarray-rand = "0.14.0"
num = "0.4.0"
rayon = "1.5.1"
smallvec = { version = "1.7.0", features = ["const_generics", "union", "write"] }
streaming-iterator = "0.1.5"
tempfile = "3.2.0"
thiserror = "1.0.30"

[profile.release]
lto = true
