[package]
name = "pattie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
bencher = "0.1.5"
chrono = "0.4.19"
clap = { version = "3.2.20", features = ["derive", "unicode", "wrap_help"] }
crossbeam-channel  = "0.5.2"
crossbeam-utils = "0.8.6"
env_logger = "0.9.0"
log = "0.4.14"
ndarray = { version = "0.15.4", features = ["blas", "matrixmultiply-threading", "rayon"] }
ndarray-rand = "0.14.0"
num = "0.4.0"
rayon = "1.5.1"
scopeguard = "1.1.0"
smallvec = { version = "1.9.0", features = ["const_generics", "union", "write"] }
streaming-iterator = "0.1.5"
tempfile = "3.3.0"
thiserror = "1.0.30"
ubyte = "0.10.1"

[profile.bench]
debug = true
lto = true

[profile.release]
debug = true
lto = true
